fix: horizontal align on mobile devices for team member images

--- a/style.css
+++ b/style.css
@@ -256,8 +256,7 @@ section h2 {
 
     .team-member img {
         display: block;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto;
         max-width: 80%;
     }
 }
